--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,38 +1,123 @@
 .robot-container {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
 }
 
 .robot-face-shape {
+  width: 550px;
+  height: 400px;
+  border-radius: 15px;
+  border-style: thin;
+  border-color: black;
+  position: relative;
+  background: linear-gradient(120deg, #000, maroon, pink);
 }
 
 .robot-eye-left {
+  position: absolute;
+  border: 4px solid transparent;
+  width: 45px;
+  height: 25px;
+  border-radius: 50px;
+  background: lightblue;
+  top: 25%;
+  left: 25%;
+
 }
 
 .robot-eye-right {
+  position: absolute;
+  border: 4px solid transparent;
+  width: 45px;
+  height: 25px;
+  border-radius: 50px;
+  background: burlywood;
+  top: 25%;
+  right: 25%;
 }
 
 .robot-ear-left {
+  position: absolute;
+  border: 4px solid transparent;
+  width: 65px;
+  height: 60px;
+  background: lightblue;
+  border-radius: 50%;
+  top: 45%;
+  left: -7%;
 }
 
 .robot-ear-right {
+  position: absolute;
+  border: 4px solid transparent;
+  width: 100px;
+  height: 100px;
+  background: url('https://picsum.photos/200/300');
+  border-radius: 50%;
+  top: 45%;
+  right: -7%;
 }
 
 .robot-nose {
+  position: absolute;
+  border: 4px solid transparent;
+  top: 40%;
+  left: 40%;
+  width: 0;
+  height: 0;
+  border-bottom: 80px solid rgb(70, 156, 99);
+  border-left: 80px solid transparent;
+  
 }
 
 .robot-teeth {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: grid;
+  grid-template-columns: repeat(6, 35px);
+  grid-template-rows: repeat(2, 20px);
+  gap: 10px 8px; 
+  justify-content: center;
+  align-content: center
 }
 
 .robot-tooth {
+  width: 35px;
+  height: 20px;
+  background: linear-gradient(to bottom, #ffd700, #ffa500); 
+  border-radius: 5px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  
 }
 
 .robot-hair-style {
+  display: flex;
+  flex-direction: row;
+  background-color: transparent;
+  width: 540px;
+  height: 300px;
+  transform: scaleY(-1);
+  position: absolute;
+  top: -80px;
 }
 
 .robot-hair-one {
+  width: 180px;
+  height: 50px;
+  background-color: cyan;
 }
 
 .robot-hair-two {
+  width: 180px;
+  height: 100px;
+  background-color: lightcoral;
 }
 
 .robot-hair-three {
+  width: 180px;
+  background-color: lightgreen;
+  height: 150px;
 }
