--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -3,6 +3,10 @@
   padding: 30px;
   margin-top: 60px;
   width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 .legal-header h1 {
@@ -12,6 +16,8 @@
 }
 
 main {
+  margin-block: 200px;
+
 }
 
 section {
@@ -23,6 +29,7 @@ section {
   max-width: 900px;
   margin: 0 auto;
   color: white;
+  margin-bottom: 200px;
 }
 
 .section-label {
@@ -30,6 +37,8 @@ section {
   background-color: #2b2d3b;
   height: max-content;
   padding: 10px 16px;
+  position: sticky;
+  top: 200px;
 }
 
 .document-content {
@@ -59,6 +68,9 @@ footer {
   background-color: #e2e2e2;
   padding: 0 30px;
   min-height: 70px;
+  position: fixed;
+  bottom: 0;
+  margin-top: 200px;
 }
 
 .footer-content {
