--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -17,7 +17,7 @@
 
 main {
   margin-block: 200px;
-
+  padding-bottom: 200px;
 }
 
 section {
@@ -29,7 +29,6 @@ section {
   max-width: 900px;
   margin: 0 auto;
   color: white;
-  margin-bottom: 200px;
 }
 
 .section-label {
