--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -8,10 +8,10 @@
   width: 550px;
   height: 400px;
   border-radius: 15px;
-  border-style: thin;
   border-color: black;
   position: relative;
   background: linear-gradient(120deg, #000, maroon, pink);
+  margin-top: 150px;
 }
 
 .robot-eye-left {
@@ -23,7 +23,25 @@
   background: lightblue;
   top: 25%;
   left: 25%;
+  animation: leftEye 5s linear infinite;
+}
 
+@keyframes leftEye {
+  0% {
+    transform: translate(0, 0);
+  }
+  25% {
+    transform: translate(20px, 0); 
+  }
+  50% {
+    transform: translate(20px, 20px); 
+  }
+  75% {
+    transform: translate(0, 20px); 
+  }
+  100% {
+    transform: translate(0, 0); 
+  }
 }
 
 .robot-eye-right {
@@ -35,6 +53,22 @@
   background: burlywood;
   top: 25%;
   right: 25%;
+  animation: rightEye 4s ease-in-out infinite 5s;
+}
+
+@keyframes rightEye {
+  0% {
+    background: burlywood;
+    height: 25px;
+  }
+  50% {
+    background: black;
+    height: 45px;
+  }
+  100% {
+    background: burlywood;
+    height: 25px;
+  }
 }
 
 .robot-ear-left {
@@ -46,6 +80,22 @@
   border-radius: 50%;
   top: 45%;
   left: -7%;
+  animation: leftEar 7s infinite 5s;
+}
+
+@keyframes leftEar {
+  0% {
+    transform: rotate(0deg);
+    background: lightblue;
+  }
+  50% {
+    transform: rotate(180deg);
+    background: limegreen;
+  }
+  100% {
+    transform: rotate(0deg);
+    background: lightblue;
+  }
 }
 
 .robot-ear-right {
@@ -57,6 +107,19 @@
   border-radius: 50%;
   top: 45%;
   right: -7%;
+  animation: rightEar 7s infinite 5s;
+}
+
+@keyframes rightEar {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 .robot-nose {
@@ -68,7 +131,16 @@
   height: 0;
   border-bottom: 80px solid rgb(70, 156, 99);
   border-left: 80px solid transparent;
+  animation: roboNose 7s ease-in-out infinite 7s;
+}
+
+@keyframes roboNose {
+ from {
   opacity: 0.5;
+ }
+ to {
+  opacity: 0;
+ }
 }
 
 .robot-teeth {
@@ -81,7 +153,7 @@
   grid-template-rows: repeat(2, 20px);
   gap: 10px 8px; 
   justify-content: center;
-  align-content: center
+  align-content: center;
 }
 
 .robot-tooth {
@@ -90,18 +162,39 @@
   background: linear-gradient(to bottom, #ffd700, #ffa500); 
   border-radius: 5px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-  
+}
+
+.robot-tooth:hover {
+  background: white;
+  transform: scale(1.2);
 }
 
 .robot-hair-style {
   display: flex;
   flex-direction: row;
   background-color: transparent;
-  width: 540px;
+  width: 550px;
   height: 300px;
   transform: scaleY(-1);
   position: absolute;
-  top: -80px;
+  top: -90px;
+  left: 410px;
+  animation: styledHair 5s ease-in-out infinite 5s;
+}
+
+@keyframes styledHair {
+  0% {
+    width: 550px;
+    left: 410px;
+  }
+  50% {
+    width: 375px;
+    left: 500px;
+  }
+  100% {
+    width: 550px;
+    left: 410px;
+  }
 }
 
 .robot-hair-one {
